# fast_zero_2

./: Dockerfile  pyproject.toml
.github/workflows/: pipline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/versions/: 27bccb43e07e_updating_the_name_of_field.py  3af51808f4f2_teste.py  3fbf25f442a0_new_field_update_at.py  62f603fcc0d9_campos_de_data_para_o_todo.py  7e6e31591b35_.py  85f18a7f91ad_create_user_table.py  bd6068672060_updated_at_rename_column_for_users.py  d850754c4f53_create_todo_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
